@@ -1,5 +1,6 @@
 package Baemin.News_Deliver.Domain.SubServices.MoreNews.Service;
 
+import Baemin.News_Deliver.Domain.Auth.Service.AuthService;
 import Baemin.News_Deliver.Domain.Kakao.entity.History;
 import Baemin.News_Deliver.Domain.Kakao.repository.HistoryRepository;
 import Baemin.News_Deliver.Domain.SubServices.Exception.SubServicesException;
@@ -7,6 +8,7 @@ import Baemin.News_Deliver.Domain.SubServices.FeedBack.Entity.Feedback;
 import Baemin.News_Deliver.Domain.SubServices.FeedBack.Repository.FeedbackRepository;
 import Baemin.News_Deliver.Domain.SubServices.MoreNews.DTO.GroupedNewsHistoryResponse;
 import Baemin.News_Deliver.Domain.SubServices.MoreNews.DTO.NewsHistoryResponse;
+import Baemin.News_Deliver.Domain.SubServices.MoreNews.DTO.PageResponse;
 import Baemin.News_Deliver.Global.Exception.ErrorCode;
 import Baemin.News_Deliver.Global.News.ElasticSearch.dto.NewsEsDocument;
 import co.elastic.clients.elasticsearch.ElasticsearchClient;
@@ -18,6 +20,7 @@ import co.elastic.clients.elasticsearch.core.search.Hit;
 import co.elastic.clients.json.JsonData;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.security.core.Authentication;
 import org.springframework.stereotype.Service;
 
 import java.io.IOException;
@@ -34,6 +37,7 @@ public class MoreNewsService {
     private final HistoryRepository historyRepository;
     private final FeedbackRepository feedbackRepository;
     private final ElasticsearchClient client;
+    private final AuthService authService;
 
     // ======================= 뉴스 추가 검색 메서드 =========================
 
@@ -153,30 +157,35 @@ public class MoreNewsService {
 
     // ======================= 내 히스토리 조회하기 메서드 =========================
 
-
     /**
-     * 내 히스토리 조회하기 메서드 (페이지 네이션 적용)
+     * 내 히스토리 조회하기 메서드 Ver2.0
      *
-     * @param page 시작 페이지
+     * Updated
+     * Why : 프론트 레이어에서 페이지 네이셔닝을 위한 정보 부족
+     * How : 반환 DTO에 페이지네이션 정보 추가
+     * When : 2025-07-21
+     * Who : 류성열
+     *
+     * @param page 현재 페이지
      * @param size 페이지 사이즈
-     * @return 페이지 네이션이 적용된 히스토리
+     * @return 페이지 정보 + 페이지 데이터
      */
-    public List<GroupedNewsHistoryResponse> getGroupedNewsHistory(int page, int size) {
-        Long userId = 1L;
+    public PageResponse<GroupedNewsHistoryResponse> getGroupedNewsHistory(int page, int size, Authentication authentication) {
 
-        // 1. 모든 히스토리 조회
+        // 인증 객체에서 카카오 ID 추출
+        String kakaoId = authentication.getName();
+        Long userId = authService.findByKakaoId(kakaoId).getId();
+
         List<History> allHistories = historyRepository.findAllBySetting_User_Id(userId);
 
-        // 2. 히스토리 ID 수집 → Feedback 일괄 조회
         List<Long> historyIds = allHistories.stream()
                 .map(History::getId)
-                .collect(Collectors.toList());
+                .toList();
 
         Map<Long, Feedback> feedbackMap = feedbackRepository.findAllById(historyIds)
                 .stream()
                 .collect(Collectors.toMap(fb -> fb.getHistory().getId(), fb -> fb));
 
-        // 3. 그룹핑: settingId + publishedAt(HOUR)
         Map<String, List<History>> grouped = allHistories.stream()
                 .collect(Collectors.groupingBy(h -> {
                     Long settingId = h.getSetting().getId();
@@ -184,7 +193,6 @@ public class MoreNewsService {
                     return settingId + "_" + truncatedPublishedAt;
                 }));
 
-        // 4. DTO 변환
         List<GroupedNewsHistoryResponse> groupedList = grouped.entrySet().stream()
                 .map(entry -> {
                     List<History> histories = entry.getValue();
@@ -206,17 +214,90 @@ public class MoreNewsService {
                             .build();
                 })
                 .sorted(Comparator.comparing(GroupedNewsHistoryResponse::getPublishedAt).reversed())
-                .collect(Collectors.toList());
+                .toList();
 
-        // 5. 페이지네이션
+        int total = groupedList.size();
         int fromIndex = page * size;
-        int toIndex = Math.min(fromIndex + size, groupedList.size());
+        int toIndex = Math.min(fromIndex + size, total);
 
-        if (fromIndex >= groupedList.size()) {
-            return Collections.emptyList();
-        }
+        List<GroupedNewsHistoryResponse> paginated = fromIndex >= total
+                ? Collections.emptyList()
+                : groupedList.subList(fromIndex, toIndex);
 
-        return groupedList.subList(fromIndex, toIndex);
+        return PageResponse.<GroupedNewsHistoryResponse>builder()
+                .data(paginated)
+                .currentPage(page)
+                .pageSize(size)
+                .totalPages((int) Math.ceil((double) total / size))
+                .totalElements(total)
+                .build();
     }
+
+    // ======================= Deprecated =========================
+
+    /**
+     * 내 히스토리 조회하기 메서드 (페이지 네이션 적용)
+     *
+     * @param page 시작 페이지
+     * @param size 페이지 사이즈
+     * @return 페이지 네이션이 적용된 히스토리
+     */
+//    public PageResponse<GroupedNewsHistoryResponse> getGroupedNewsHistory(int page, int size) {
+//        Long userId = 1L;
+//
+//        // 1. 모든 히스토리 조회
+//        List<History> allHistories = historyRepository.findAllBySetting_User_Id(userId);
+//
+//        // 2. 히스토리 ID 수집 → Feedback 일괄 조회
+//        List<Long> historyIds = allHistories.stream()
+//                .map(History::getId)
+//                .collect(Collectors.toList());
+//
+//        Map<Long, Feedback> feedbackMap = feedbackRepository.findAllById(historyIds)
+//                .stream()
+//                .collect(Collectors.toMap(fb -> fb.getHistory().getId(), fb -> fb));
+//
+//        // 3. 그룹핑: settingId + publishedAt(HOUR)
+//        Map<String, List<History>> grouped = allHistories.stream()
+//                .collect(Collectors.groupingBy(h -> {
+//                    Long settingId = h.getSetting().getId();
+//                    LocalDateTime truncatedPublishedAt = h.getPublishedAt().truncatedTo(ChronoUnit.HOURS);
+//                    return settingId + "_" + truncatedPublishedAt;
+//                }));
+//
+//        // 4. DTO 변환
+//        List<GroupedNewsHistoryResponse> groupedList = grouped.entrySet().stream()
+//                .map(entry -> {
+//                    List<History> histories = entry.getValue();
+//                    History any = histories.get(0);
+//
+//                    List<NewsHistoryResponse> newsResponses = histories.stream()
+//                            .map(history -> {
+//                                Feedback feedback = feedbackMap.get(history.getId());
+//                                return NewsHistoryResponse.from(history, feedback);
+//                            })
+//                            .toList();
+//
+//                    return GroupedNewsHistoryResponse.builder()
+//                            .settingId(any.getSetting().getId())
+//                            .publishedAt(any.getPublishedAt().truncatedTo(ChronoUnit.HOURS))
+//                            .settingKeyword(any.getSettingKeyword())
+//                            .blockKeyword(any.getBlockKeyword())
+//                            .newsList(newsResponses)
+//                            .build();
+//                })
+//                .sorted(Comparator.comparing(GroupedNewsHistoryResponse::getPublishedAt).reversed())
+//                .collect(Collectors.toList());
+//
+//        // 5. 페이지네이션
+//        int fromIndex = page * size;
+//        int toIndex = Math.min(fromIndex + size, groupedList.size());
+//
+//        if (fromIndex >= groupedList.size()) {
+//            return Collections.emptyList();
+//        }
+//
+//        return groupedList.subList(fromIndex, toIndex);
+//    }
 
 }
